<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <TextView
            android:id="@+id/text_view_restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/restaurant_name_text_view"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_restaurant_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:padding="12dp"
            android:text="@string/action_to_email" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_appetizers"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/appetizer_image_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/starter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/appetizer_text_view_content"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_main_courses"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_view_appetizers"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/main_course_image_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/main" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/main_course_text_view_content"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_desserts"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_view_main_courses"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/dessert_image_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dessert" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/dessert_text_view_content"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>


